@@ -1,0 +1,3 @@
+[I] URL: http://127.0.0.1:9999/index.html
+[I] URL: http://www.google.com/?q=CURIE
+[I] URL: http://en.wikipedia.org/wiki/CURIE
