@@ -1,0 +1,6 @@
+<html xmlns:wiki="http://en.wikipedia.org/wiki/" xmlns:google="http://www.google.com/?q=">
+  <body>
+    <a href="[wiki:CURIE]">CURIE at Wikipedia</a>
+    <a href="[google:CURIE]">Search for CURIE on Google</a>
+  </body>
+</html>
